--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "guff-ida"
-version = "0.1.2"
+version = "0.1.3"
 edition = "2018"
 description = "Information Dispersal Algorithm"
 homepage = "https://github.com/declanmalone/guff-ida"
@@ -17,7 +17,8 @@ criterion = "0.3"
 # crate won't provide any actual matrix code so
 # guff-matrix lets us write unit tests on actual
 # matrices.
-guff-matrix = "0.1.8"
+"guff-matrix"        = { path="../guff-matrix",        version = "~0.1" }
+
 
 [[bench]]
 name = "bench"
@@ -29,7 +30,7 @@ debug = true
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-guff = "0.1.7"
+"guff"        = { path="../guff",        version = "~0.1" }
 # "num" = "0.4.0"
 "num-traits" = "0.2.14"
 
